# rust-tar

./: Cargo.toml  README.md
src/: lib.rs  main.rs
test-files/: ascii.txt  ascii2.txt  multiple-files.tar  single-text-file.tar
tests/: byte-sequences.rs  cli.rs
