[package]
name = "rust-tar"
version = "0.1.1"
authors = ["Reilly <reilly.wood@icloud.com>"]
edition = "2021"

[lib]
name = "tarlib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "~0.3.2"

[dev-dependencies]
assert_cmd = "~0.11.1"
predicates = "1"
